# bandwidth-experiments

./: .gitignore  CMakeLists.txt  results.ipynb
etc/: cflags.cmake
results/: lambda-a2a-w160-30s.csv  lambda-a2a-w20-30s.csv  lambda-group5-w160-30s.csv
src/frontend/: coordinator.py  lambdafunc.cc  run-experiment.cc
src/nat/: peer.cc  peer.hh
src/net/: aws.cc  aws.hh  awsv4_sig.cc  lambda.cc  lambda.hh
src/remote/: create-function.py  main.py
src/util/: ring_buffer.cc
